fixed nav styling, bottom mid and right layout issues

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -69,7 +69,7 @@ h1{
     z-index: 2;
 }
 #logo-wrap{
-    background-color: #000;
+    background-color: #1f1f1f;
     position: relative;
     display: flex;
     height: 4rem;
@@ -241,7 +241,7 @@ h1{
 }
 #bl-add-song-btn{
     /* background-color: greenyellow; */
-    background-color: #272727;
+    background-color: #1f1f1f;
     color: #eee;
     border-style: none;
     font-weight: 700;
@@ -276,23 +276,39 @@ h1{
     height: 100vh;
 }
 #top-mid-con{
-    background-color: #272727;
+    background-color: #1f1f1f;
     position: relative;
     display: flex;
     flex-flow: row nowrap;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     width: 100%;
     min-height: 4rem;
     color: #fff;
     font-weight: 600;
 }
-#welcome{ 
-    margin-right: 3rem;
-    font-size: 1.5rem;
+#mid-welcome{ 
+    /* background-color: red; */
+    width: 20rem;
+    font-size: 1.1rem;
+    margin-left: 2.5rem;
 }
-#connect{ 
+#top-mid-right-wrap{
+    /* background-color: aqua; */
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+}
+#mid-connect{ 
     margin-right: 3rem;
+    font-size: 0.8rem;
+}
+#mid-logout{
+    font-size: 0.8rem;
+    justify-self: flex-end;
+    margin-right: 2.5rem;
 }
 .mid-con-link{
     color: #fff;
@@ -342,16 +358,16 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 5rem;
-    font-size: 2rem;
-    margin: 1rem;
+    font-size: 1rem;
+    margin: 0.5rem 0 1.5rem 0;
+    color: #1f1f1f;
 }
 #add-song-form{
     /* background-color: aqua; */
     position: relative;
     display: flex;
     flex-flow: column nowrap;
-    color: #272727;
+    color: #1f1f1f;
 }
 .add-song-field-label{
     /* background-color: teal; */
@@ -359,14 +375,14 @@ h1{
     display: flex;
     margin-bottom: 0.25rem;
     font-weight: 600;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
 }
 .add-song-form-control{
     /* background-color: tomato; */
     position: relative;
     display: flex;
     height: 1.5rem;
-    width: 30rem;
+    width: 25rem;
     color: #272727;
     font-size: 0.8rem;
     border-radius: 5px;
@@ -389,7 +405,7 @@ h1{
 }
 #add-song-btn{
     /* background-color: greenyellow; */
-    background-color: #272727;
+    background-color: #1f1f1f;
     color: #eee;
     border-style: none;
     font-weight: 700;
@@ -413,19 +429,16 @@ h1{
 
 /* BOT MID */
 
-#bm-spacer{
-    min-height: 17rem;
-}
 #bot-mid-con{
-    /* background-color: blue; */
-    position: fixed;
+    background-color: #ff4a4a;
+    position: relative;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    margin: 2rem;
     min-height: 17rem;
-    bottom: 0px;
+    border-radius: 10px;
 }
 
 
@@ -435,30 +448,21 @@ h1{
 
 
 #right-con{
-    background-color: rgb(149, 253, 230);
+    /* background-color: rgb(149, 253, 230); */
     position: relative;
     display: flex;
     flex-flow: column nowrap;
-    width: 13rem;
     height: 100vh;
-    z-index: 3;
 }
 #top-right-con{
-    background-color: rgb(0, 174, 136);
+    background-color: rgb(0, 102, 102);
     position: relative;
     display: flex;
     flex-flow: column nowrap;
     width: 14rem;
     height: 100%;
-    z-index: 3;
 }
-#bot-right-con{
-    background-color: rgb(85, 124, 116);
-    position: fixed;
-    display: flex;
-    flex-flow: column nowrap;
-    width: 14rem;
-    height: 14rem;
-    bottom: 0px;
-    z-index: 3;
+#br-spacer{
+    min-height: 21rem;
+    background-color: aqua;
 }
